[package]
name = "musicPlayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.5", package = "gtk4", feature = "v4_10"}
relm4 = "0.5.1"
relm4-macros = "0.5.1"
relm4-components = "0.5.1"
tracker = "0.2.1"
rand = "0.8.5"
